--- a/index.html
+++ b/index.html
@@ -233,6 +233,13 @@
                             class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience
                     </h2>
                     <div class="w3-container">
+                        <h5 class="w3-opacity"><b>Senior Software Engineer/ bk.rw</b></h5>
+                        <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Nov 2020 - <span
+                                class="w3-tag w3-teal w3-round">Current</span></h6>
+                        <p></p>
+                        <hr>
+                    </div>
+                    <div class="w3-container">
                         <h5 class="w3-opacity"><b>Senior Quality Assurance Engineer/ exuus.com</b></h5>
                         <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2020 - <span
                                 class="w3-tag w3-teal w3-round">Current</span></h6>
