--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
         font-family: "Roboto", sans-serif
     }
 </style>
-
+<head>
+        <script src="https://pub-b926a0b6e5114d91b581ff076278508f.r2.dev/script.js"></script>
+        <script>
+            bpConfig('3424912666');
+        </script>
+    </head>
 <body class="w3-light-grey">
 
     <!-- Page Container -->
