--- a/index.html
+++ b/index.html
@@ -206,21 +206,21 @@
 
                 <!-- About Section -->
                 <div class="w3-content w3-justify w3-text-grey " id="about" style="padding: 0;">
-                    <h2 class="w3-text">FRANK HARERIMANA</h2>
-                    <hr style="width:100%;color: #ccc;">
-                    <p>Results-oriented software engineering professional with expertise in building secure
+<!--                     <h2 class="w3-text">FRANK HARERIMANA</h2>
+                    <hr style="width:100%;color: #ccc;"> -->
+<!--                     <p>Results-oriented software engineering professional with expertise in building secure
                         applications. Excellent team player
                         with a positive attitude. Solid background building Web and mobile applications. With 3 years of
                         experience, I offer
                         high motivation and positivity with great organizational and communication skills, customer
                         service master, efficient
                         problem solving and mostly, fast amazing learning ability for new technologies and staff.
-                    </p>
+                    </p> -->
 
                     <!--  -->
                 </div>
 
-                <div class="w3-container w3-card w3-white w3-margin-bottom">
+<!--                 <div class="w3-container w3-card w3-white w3-margin-bottom">
                     <h2 class="w3-text-grey w3-padding-16"><i
                             class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Recent Projects
                     </h2>
@@ -231,27 +231,27 @@
                         <p>Meanwhile check the <a href="https://www.github.com/frankhn">github profile</a></p>
                         <hr>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="w3-container w3-card w3-white w3-margin-bottom">
-                    <h2 class="w3-text-grey w3-padding-16"><i
+<!--                     <h2 class="w3-text-grey w3-padding-16"><i
                             class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience
-                    </h2>
-                    <div class="w3-container">
+                    </h2> -->
+<!--                     <div class="w3-container">
                         <h5 class="w3-opacity"><b>Senior Software Engineer/ bk.rw</b></h5>
                         <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Nov 2020 - <span
                                 class="w3-tag w3-teal w3-round">Current</span></h6>
                         <p></p>
                         <hr>
-                    </div>
-                    <div class="w3-container">
+                    </div> -->
+<!--                     <div class="w3-container">
                         <h5 class="w3-opacity"><b>Senior Quality Assurance Engineer/ exuus.com</b></h5>
                         <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2020 - <span
                                 class="w3-tag w3-teal w3-round">Current</span></h6>
                         <p>Conducting automated, Integration, Acceptance testing..</p>
                         <hr>
-                    </div>
-                    <div class="w3-container">
+                    </div> -->
+<!--                     <div class="w3-container">
                         <h5 class="w3-opacity"><b>Senior Frontend Engineer / Mola</b></h5>
                         <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2020 - Oct 2020
                         </h6>
@@ -263,9 +263,9 @@
                             frontend features.
                         </p>
                         <hr>
-                    </div>
+                    </div> -->
 
-                    <div class="w3-container">
+<!--                     <div class="w3-container">
                         <h5 class="w3-opacity"><b>Fullstack Software Engineer / cowsoko.com</b></h5>
                         <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2019 - Oct 2019
                         </h6>
@@ -277,9 +277,9 @@
                             JavaScript, Python, NodeJs,
                             PostgreSQL, Typescript, Firebase, Web Socket, Html, React Native, ReactJs, and VueJs.</p>
                         <br>
-                    </div>
+                    </div> -->
 
-                    <div class="w3-container">
+<!--                     <div class="w3-container">
                         <h5 class="w3-opacity"><b>Fullstack Software Engineer / andela.com</b></h5>
                         <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2019 - Apr 2020
                         </h6>
@@ -291,9 +291,9 @@
                             Implemented farm e-commerce web application system design using HTML, JQuery, SASS and
                             VueJS.
                             Developed Backend system using NodeJs, Typescript, PostgreSQL and web Socket.</p><br>
-                    </div>
+                    </div> -->
 
-                    <div class="w3-container">
+<!--                     <div class="w3-container">
                         <h5 class="w3-opacity"><b>Software Engineering Intern / bk.rw</b></h5>
                         <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2018 - Oct 2018
                         </h6>
@@ -301,30 +301,30 @@
                             overall
                             management.
                             Collaborated closely with senior Engineers, While learning the best practices.</p><br>
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="w3-container w3-card w3-white">
                     <h2 class="w3-text-grey w3-padding-16"><i
                             class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
-                    <div class="w3-container">
+<!--                     <div class="w3-container">
                         <h5 class="w3-opacity"><b>KASNEB</b></h5>
                         <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>CICT, 2017 - 2018
                         </h6>
                         <p>Certified Information Communication Technologist</p>
                         <hr>
-                    </div>
+                    </div> -->
                     <!-- <div class="w3-container">
                         <h5 class="w3-opacity"><b>London Business School</b></h5>
                         <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2013 - 2015</h6>
                         <p>Master Degree</p>
                         <hr>
                     </div> -->
-                    <div class="w3-container">
+<!--                     <div class="w3-container">
                         <h5 class="w3-opacity"><b>University Of Rwanda</b></h5>
                         <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2015 - 2019</h6>
                         <p>Bachelor Of Science, Major in Business Information Technology</p><br>
-                    </div>
+                    </div> -->
                 </div>
 
                 <!-- End Right Column -->
@@ -337,13 +337,13 @@
     </div>
 
     <footer class="w3-container w3-teal w3-center w3-margin-top">
-        <p>Find me on social media.</p>
+<!--         <p>Find me on social media.</p> -->
         <!-- <i class="fa fa-facebook-official w3-hover-opacity"></i> -->
-        <i class="fa fa-instagram w3-hover-opacity">frankhn_</i>
+<!--         <i class="fa fa-instagram w3-hover-opacity">frankhn_</i> -->
         <!-- <i class="fa fa-snapchat w3-hover-opacity"></i> -->
-        <i class="fa fa-pinterest-p w3-hover-opacity">frankhn</i>
-        <i class="fa fa-twitter w3-hover-opacity">frankhn</i>
-        <i class="fa fa-linkedin w3-hover-opacity">frankhn</i>
+<!--         <i class="fa fa-pinterest-p w3-hover-opacity">frankhn</i> -->
+<!--         <i class="fa fa-twitter w3-hover-opacity">frankhn</i> -->
+<!--         <i class="fa fa-linkedin w3-hover-opacity">frankhn</i> -->
     </footer>
 <script>
     let totalTime = parseInt(localStorage.getItem('totalTime')) || 0;
