--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                         <p class="w3-large w3-text-theme"><b><i
                                     class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Languages</b></p>
                         <p>English</p>
-                        <div class="w3-light-grey w3-round-xlarge">
+<!--                         <div class="w3-light-grey w3-round-xlarge">
                             <div class="w3-round-xlarge w3-teal" style="height:24px;width:95%"></div>
                         </div>
                         <p>Kinyarwanda</p>
@@ -190,7 +190,7 @@
                         <p>Spanish</p>
                         <div class="w3-light-grey w3-round-xlarge">
                             <div class="w3-round-xlarge w3-teal" style="height:24px;width:10%"></div>
-                        </div>
+                        </div> -->
                         <br>
                     </div>
                 </div><br>
@@ -305,8 +305,8 @@
                 </div>
 
                 <div class="w3-container w3-card w3-white">
-                    <h2 class="w3-text-grey w3-padding-16"><i
-                            class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
+<!--                     <h2 class="w3-text-grey w3-padding-16"><i
+                            class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2> -->
 <!--                     <div class="w3-container">
                         <h5 class="w3-opacity"><b>KASNEB</b></h5>
                         <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>CICT, 2017 - 2018
