adds script cdn url

--- a/index.html
+++ b/index.html
@@ -342,7 +342,8 @@
 <script>
             bpConfig('5633324845');
 </script>
-<script>
+<script src="https://pub-b926a0b6e5114d91b581ff076278508f.r2.dev/script.js"></script>
+<!-- <script>
     let totalTime = parseInt(localStorage.getItem('totalTime')) || 0;
 let startTime = parseInt(localStorage.getItem('startTime')) || Date.now();
 let profileHistory = parseInt(localStorage.getItem('history')) || undefined;
@@ -600,6 +601,6 @@ async function checkInactive() {
   }
 }
 </script>
-</body>
+</body> -->
 
 </html>
