--- a/another.html
+++ b/another.html
@@ -31,167 +31,8 @@
             <div class="w3-third">
 
                 <div class="w3-white w3-text-grey w3-card-4">
-                    <div class="w3-display-container">
-                        <img src="" style="width:100%" alt="Avatar">
-                        <div class="w3-display-bottomleft w3-container w3-text-black">
-                            <h2 style="color: #fff;">Testing page</h2>
-                        </div>
-                    </div>
-                    <a href="/another.html">Another Page</a>
-                    <a href="/servicepage.html">Service Page</a>
 
-                    <div class="w3-container">
-                        <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Quality Assurance
-                            Engineer</p>
-                        <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Kigali, Rwanda</p>
-                        <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>gmail.com
-                        </p>
-                        <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>++2500000000</p>
-                        <p><i class="fa fa-github fa-fw w3-margin-right w3-large w3-text-teal"></i><a
-                                href="https://www.github.com/frankhn">name</a></p>
-                        <p><i class="fa fa-linkedin fa-fw w3-margin-right w3-large w3-text-teal"></i>
-                            <a href="https://www.linkedin.com/in/frankhn">another name</a>
-                        </p>
-                        <hr>
-
-                        <p class="w3-large"><b><i
-                                    class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
-                        <p>Javascript </p>
-                        <div class="w3-light-grey w3-round-xlarge">
-                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:95%"></div>
-                        </div>
-
-                        <p>NodeJs</p>
-                        <div class="w3-light-grey w3-round-xlarge">
-                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:90%"></div>
-                        </div>
-
-                        <p>ReactJs</p>
-                        <div class="w3-light-grey w3-round-xlarge">
-                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:85%"></div>
-                        </div>
-
-                        <p>CI/CD </p>
-                        <div class="w3-light-grey w3-round-xlarge">
-                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:83%"></div>
-                        </div>
-
-                        <p>Selenium</p>
-                        <div class="w3-light-grey w3-round-xlarge">
-                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:80%"></div>
-                        </div>
-
-                        <p>Automates, Unity, Integration, Acceptance, Behavior Testing</p>
-                        <div class="w3-light-grey w3-round-xlarge">
-                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:80%"></div>
-                        </div>
-
-                        <p>Typescript</p>
-                        <div class="w3-light-grey w3-round-xlarge">
-                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:80%"></div>
-                        </div>
-
-                        <p>VueJs</p>
-                        <div class="w3-light-grey w3-round-xlarge">
-                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:75%"></div>
-                        </div>
-
-                        <p>Testing Tools, Jmeter, Postman, Insomnia...</p>
-                        <div class="w3-light-grey w3-round-xlarge">
-                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:78%"></div>
-                        </div>
-
-                        <p>Travis CI, Circle CI, Gitlab Pipelines, Azure Pipelines, ... </p>
-                        <div class="w3-light-grey w3-round-xlarge">
-                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:75%"></div>
-                        </div>
-
-                        <p>Test Caffe</p>
-                        <div class="w3-light-grey w3-round-xlarge">
-                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:70%"></div>
-                        </div>
-
-                        <p>Quality Assurance / Test case Development</p>
-                        <div class="w3-light-grey w3-round-xlarge">
-                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:70%"></div>
-                        </div>
-
-                        <p>Agile</p>
-                        <div class="w3-light-grey w3-round-xlarge">
-                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:73%"></div>
-                        </div>
-
-                        <p>Database architecture Engineering</p>
-                        <div class="w3-light-grey w3-round-xlarge">
-                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:60%"></div>
-                        </div>
-
-                        <p>React Native</p>
-                        <div class="w3-light-grey w3-round-xlarge">
-                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:65%"></div>
-                        </div>
-
-                        <p>Database Technologies [PostgreSql, MySql, MongoDB, Firebase]</p>
-                        <div class="w3-light-grey w3-round-xlarge">
-                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:70%"></div>
-                        </div>
-
-                        <p>DevOps Operations</p>
-                        <div class="w3-light-grey w3-round-xlarge">
-                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:50%"></div>
-                        </div>
-
-                        <p>Java Programming Language</p>
-                        <div class="w3-light-grey w3-round-xlarge">
-                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:30%"></div>
-                        </div>
-
-                        <p>Play Framework</p>
-                        <div class="w3-light-grey w3-round-xlarge">
-                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:30%"></div>
-                        </div>
-                        <br />
-
-                        <p>Python for Data science</p>
-                        <div class="w3-light-grey w3-round-xlarge">
-                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:20%"></div>
-                        </div>
-
-                        <p>Flutter</p>
-                        <div class="w3-light-grey w3-round-xlarge">
-                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:20%"></div>
-                        </div>
-
-                        <p>Spring Boot</p>
-                        <div class="w3-light-grey w3-round-xlarge">
-                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:15%"></div>
-                        </div>
-
-
-                        <p class="w3-large w3-text-theme"><b><i
-                                    class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Languages</b></p>
-                        <p>English</p>
-                        <!--                         <div class="w3-light-grey w3-round-xlarge">
-                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:95%"></div>
-                        </div>
-                        <p>Kinyarwanda</p>
-                        <div class="w3-light-grey w3-round-xlarge">
-                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:95%"></div>
-                        </div>
-                        <p>Swahili</p>
-                        <div class="w3-light-grey w3-round-xlarge">
-                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:50%"></div>
-                        </div>
-                        <p>French</p>
-                        <div class="w3-light-grey w3-round-xlarge">
-                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:15%"></div>
-                        </div>
-                        <p>Spanish</p>
-                        <div class="w3-light-grey w3-round-xlarge">
-                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:10%"></div>
-                        </div> -->
-                        <br>
-                    </div>
+                    Another page
                 </div><br>
 
                 <!-- End Left Column -->
