--- a/another.html
+++ b/another.html
@@ -42,7 +42,9 @@
             <div class="w3-twothird">
 
 
-
+                <a href="/frankhn/another.html">Another Page</a>
+                <a href="/frankhn/servicepage.html">Service Page</a>
+                <a href="/frankhn/">Service Page</a>
 
                 <!-- About Section -->
                 <div class="w3-content w3-justify w3-text-grey " id="about" style="padding: 0;">
