--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
                             <h2 style="color: #fff;">Testing page</h2>
                         </div>
                     </div>
-                    <a href="/another.html">Another Page</a>
-                    <a href="/servicepage.html">Service Page</a>
+                    <a href="/frankhn/another.html">Another Page</a>
+                    <a href="/frankhn/servicepage.html">Service Page</a>
+                    <a href="/frankhn/">Service Page</a>
 
                     <div class="w3-container">
                         <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Quality Assurance
