--- a/servicepage.html
+++ b/servicepage.html
@@ -34,7 +34,9 @@
 
                     Service page
                 </div><br>
-
+                <a href="/frankhn/another.html">Another Page</a>
+                <a href="/frankhn/servicepage.html">Service Page</a>
+                <a href="/frankhn/">Service Page</a>
                 <!-- End Left Column -->
             </div>
 
